test/negative/feature_multipletypesperfile.java

public class feature_multipletypesperfile {
  protected int x;
}

public class B {
  protected int y;
}

